--- a/themes/flex-bp-hugo-cv/layouts/partials/_footer.html
+++ b/themes/flex-bp-hugo-cv/layouts/partials/_footer.html
@@ -1,14 +1,15 @@
 <div class="fabs">
     {{ if .IsTranslated }}
-        {{ range $.Site.Home.AllTranslations }}
-            <a href="{{ .RelPermalink }}" class="btn">{{ .Language.LanguageName }}</a>
-        {{ end }}
+    {{ range $.Site.Home.AllTranslations }}
+    <a href="{{ .RelPermalink }}" class="btn">{{ .Language.LanguageName }}</a>
+    {{ end }}
     {{ end }}
     <button class="btn-toggle-theme btn" aria-label="Toggle theme"><i class="fas fa-adjust"></i></button>
-    <a href="#" class="btn" aria-label="Go to top"><i class="fas fa-arrow-circle-up"></i></a>    
+    <a href="#" class="btn" aria-label="Go to top"><i class="fas fa-arrow-circle-up"></i></a>
 </div>
 
 <footer>
     &copy; {{ now.Format "2006" }} {{ range .Site.Author }}{{ . }}{{ end }}.
-    {{ i18n "themeby" }} <a href="https://www.spech.de" target="_blank" rel="noopener noreferrer">Sebastian Pech</a>.
+    {{ i18n "themeby" }} <a href="https://www.spech.de" target="_blank" rel="noopener noreferrer">Sebastian Pech</a> and
+    <a href="https://gohugo.io/" target="_blank" rel="noopener noreferrer">Hugo</a>.
 </footer>
